# email-automation-system

./: .gitignore  02_fetch-ten-emails.py  03-cron-fetch-basic-preview-mail.py  05-cron-fetch-complete-mail.py  07-store-email-with-attachments.py  08-store-maximum-mails-with-attachments-no-cronjob.py  cron.py  mails.db  main.py  pyproject.toml  quickstart.py  snippet-test.py  snippet.py  test.py
